<resources>
    <string name="app_name">TimeZone</string>
    <string name="app_description">Display an alternate timezone and date</string>
    <string name="ext_title_1">TimeZone #1</string>
    <string name="ext_title_2">TimeZone #2</string>
    <string name="ext_title_3">TimeZone #3</string>
    <string name="prefs_title_1">TimeZone #1 Preferences</string>
    <string name="prefs_title_2">TimeZone #2 Preferences</string>
    <string name="prefs_title_3">TimeZone #3 Preferences</string>
    <string name="prefs_category_options">Timezone Options</string>
    <string name="prefs_category_about">About</string>
    <string name="prefs_select_timezone_key_1">timezone_1</string>
    <string name="prefs_select_timezone_key_2">timezone_2</string>
    <string name="prefs_select_timezone_key_3">timezone_3</string>
    <string name="prefs_select_timezone_title">Select Timezone</string>
    <string name="prefs_12_or_24_key_1">select_12_or_24_hour_format_1</string>
    <string name="prefs_12_or_24_key_2">select_12_or_24_hour_format_2</string>
    <string name="prefs_12_or_24_key_3">select_12_or_24_hour_format_3</string>
    <string name="prefs_12_or_24_title">Select Status Format</string>
    <string-array name="prefs_12_or_24_entries">
        <item>12 Hour</item>
        <item>24 Hour</item>
    </string-array>
    <string-array name="prefs_12_or_24_values">
        <item>hh:mm a</item>
        <item>HH:mm</item>
    </string-array>
    <string name="prefs_system_or_custom_key_1">select_system_or_custom_format_1</string>
    <string name="prefs_system_or_custom_key_2">select_system_or_custom_format_2</string>
    <string name="prefs_system_or_custom_key_3">select_system_or_custom_format_3</string>
    <string name="prefs_system_or_custom_title">Select Extended Format</string>
    <string-array name="prefs_system_or_custom_entries_values">
        <item>Use System Time</item>
        <item>Use Custom Format</item>
    </string-array>
    <string name="prefs_time_builder_key">time_builder_launcher</string>
    <string name="prefs_time_builder_title">Custom Format</string>
    <string name="prefs_about_key">about_dialog</string>
    <string name="prefs_about_title">About</string>
    <string name="default_timezone">Europe/London</string>
    <string name="default_hour_format">hh:mm a</string>
    <string name="default_extended_format">Use System Time</string>
</resources>